css/stylesheet.css
/*! Generated by Font Squirrel (https://www.fontsquirrel.com) on April 20, 2019 */



@font-face {
    font-family: 'one_dayregular';
    src: url('oneday-webfont.woff2') format('woff2'),
         url('oneday-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}
h1 {
    font-family: 'one_dayregular';
    src: url('oneday-webfont.woff2') format('woff2'),
         url('oneday-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-size: 112px;
    text-align: center;
    color: #FFFFFF;
    z-index: 2;
    text-shadow: 2px 2px 4px #000000;
}
p, a, p a {
  font-family: 'one_dayregular';
  src: url('oneday-webfont.woff2') format('woff2'),
       url('oneday-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-size: 72px;
  text-align: center;
  align-content: center;
  color: #9b111e;
  z-index: 2;
  text-shadow: 2px 2px 4px #000000;
  transition: all .2s ease-in-out;
}
hr {
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  padding: 0;
}
a {
  color: inherit;
  text-decoration: none;
}

a:hover, p:hover {
  transform: scale(1.1);
}

